--- a/curiosidades.html
+++ b/curiosidades.html
@@ -22,7 +22,7 @@
     <main>
         <article><!--Tag para marcar artigo/texto-->
             <ol> 
-                    <h2>Origem humilde </h2>
+                    <h2>Origem Humilde </h2>
 
                 <li>O avô de Machado de Assis foi escravo em uma chácara no morro do Livramento, no Rio de Janeiro, onde o escritor nasceu e foi batizado pela dona da casa, Maria José de Mendonça Barroso. Aliás, foi lá que ele aprendeu a ler.</li> 
                 <br>
@@ -39,23 +39,23 @@
                     <img src="images/o corvo.jpg" alt="Livro o corvo">
                 </figure>
 
-                    <li>Chefia na ABL</li>
+                    <h2>Chefia na ABL</h2>
                 
-                <p>Foi um dos fundadores da Academia Brasileira de Letras (ABL) e ocupou a cadeira 23 — na época, a primeira cadeira foi designada a José de Alencar. Machado foi o primeiro presidente da instituição.</p> <br>
+                <li>Foi um dos fundadores da Academia Brasileira de Letras (ABL) e ocupou a cadeira 23 — na época, a primeira cadeira foi designada a José de Alencar. Machado foi o primeiro presidente da instituição.</li> <br>
 
                 <figure>
-                    <img src="images/o corvo.jpg" alt="Livro o corvo">
+                    <img src="images/abl.jpg" alt="Associação Brasileira de Letras">
                 </figure>
 
-                    <h2>Fama de bruxo</h2>
+                    <h2>Fama de Bruxo</h2>
 
                 <li>Foi apelidado pelos vizinhos de “Bruxo do Cosme Velho”, pois teria queimado cartas em um caldeirão em sua casa que ficava na Rua Cosme Velho. O apelido, entretanto, só pegou quando o poeta Carlos Drummond de Andrade fez o poema A um bruxo, com amor, que reverencia o escritor.</li> <br>
 
                 <figure>
-                    <img src="images/o corvo.jpg" alt="Livro o corvo">
+                    <img src="images/machado bruxo.png" alt="Machado Bruxo">
                 </figure>
 
-                    <h2>Diagnóstico precoce</h2>
+                    <h2>Diagnóstico Precoce</h2>
 
                 <li>Em seu livro Anjo Rafael, Machado de Assis previu a existência da doença mental folie à deux (delírio a dois, em português) antes de ela ser descrita. A obra conta a história de uma filha que é “contagiada” pela loucura do pai, enlouquecendo também. Anos depois da publicação, o mal foi descoberto por pesquisadores. Como se não bastasse, o brasileiro também descobriu a cura para a doença: afastar a pessoa saudável de quem tem o problema mental.</li> <br>
 
