--- a/curiosidades.html
+++ b/curiosidades.html
@@ -20,7 +20,7 @@
         <a href="curiosidades.html"> Curiosidades</a>
     </nav>
     <main>
-        <article><!--Tag para marcar artigo/texto-->
+        <article class="cur"><!--Tag para marcar artigo/texto-->
             <ol> 
                     <h2>Origem Humilde </h2>
 
@@ -60,7 +60,7 @@
                 <li>Em seu livro Anjo Rafael, Machado de Assis previu a existência da doença mental folie à deux (delírio a dois, em português) antes de ela ser descrita. A obra conta a história de uma filha que é “contagiada” pela loucura do pai, enlouquecendo também. Anos depois da publicação, o mal foi descoberto por pesquisadores. Como se não bastasse, o brasileiro também descobriu a cura para a doença: afastar a pessoa saudável de quem tem o problema mental.</li> <br>
 
                 <figure>
-                    <img src="images/o corvo.jpg" alt="Livro o corvo">
+                    <img src="images/Diagnostico.jfif" alt="Diagnóstico Precoce">
                 </figure>
 
                     <h2>Talento no xadrez</h2>
@@ -68,7 +68,7 @@
                 <li>O autor era enxadrista e participou do primeiro campeonato brasileiro do esporte mental, ficando em terceiro lugar. As peças que utilizou estão expostas até hoje na Academia Brasileira de Letras.</li> <br>
 
                 <figure>
-                    <img src="images/o corvo.jpg" alt="Livro o corvo">
+                    <img src="images/Xadrez.jfif" alt="Xadrez">
                 </figure>
 
                     <h2>Amor da vida</h2>
@@ -76,7 +76,7 @@
                 <li>Ele foi casado por 35 anos com Carolina Machado, que era quatro anos mais velha, mas não tiveram filhos. Alguns especialistas dizem que Carolina era muito inteligente e ajudava na revisão dos textos. Com a morte da mulher, Machado entrou em profunda depressão e escreveu para o amigo Joaquim Nabuco: “Foi-se a melhor parte da minha vida, e aqui estou só no mundo”.</li> <br>
 
                 <figure>
-                    <img src="images/o corvo.jpg" alt="Livro o corvo">
+                    <img src="images/Amor da vida.jfif" alt="Amor da Vida">
                 </figure>
 
                     <h2>Gafe histórica</h2>
@@ -84,7 +84,7 @@
                 <li>No prefácio da segunda edição de sua obra Poesias Completas, publicada em 1902, a palavra "cegara" foi substituída, na expressão “lhe cegara o juízo”, por um inusitado “cagara”. Calma, a história é ainda pior. Entenda aqui por que a gafe foi ainda maior. Diz a lenda que o próprio Machado teria participado de um mutirão para corrigir os exemplares antes de chegarem ao público. O que se sabe é que alguns escaparam e saíram com o erro.</li> <br>
 
                 <figure>
-                    <img src="images/o corvo.jpg" alt="Livro o corvo">
+                    <img src="images/Poesias Completas.jfif" alt="Livro o corvo">
                 </figure>
 
                     <h2>Vários ofícios</h2>
@@ -92,7 +92,7 @@
                 <li>Machado escreveu nove textos teatrais e foi crítico dessa forma de arte desde os 21 anos. Também trabalhou como jornalista e, no início da juventude, vendeu doces feitos pela madrasta e engraxou sapatos. Alguns especialistas acreditam que ele chegou a ser coroinha em uma igreja, mas não há confirmações.</li> <br>
 
                 <figure>
-                    <img src="images/o corvo.jpg" alt="Livro o corvo">
+                    <img src="images/Sapato.png" alt="engraxar sapatos">
                 </figure>
 
                     <h2>Cargos públicos</h2>
@@ -100,7 +100,7 @@
                 <li>Em 1888, foi condecorado pelo então imperador Dom Pedro 2º com a Ordem da Rosa e, meses depois, foi indicado para fazer parte da Secretaria da Agricultura. Anos mais tarde, chegou a ocupar o cargo de diretor-geral da viação da Secretaria da Indústria, Viação e Obras Públicas.</li> <br>
 
                 <figure>
-                    <img src="images/o corvo.jpg" alt="Livro o corvo">
+                    <img src="images/Publico.jfif" alt="Cargo público">
                 </figure>
 
                     <h2>Luta</h2>
@@ -108,7 +108,7 @@
                 <li>Era epilético e apresentava sinais de gagueira, o que contribuiu para formação de sua personalidade insegura e reclusa. Além disso, Machado de Assis, por ser mulato, enfrentou muito preconceito para conseguir reconhecimento.</li> <br>
 
                 <figure>
-                    <img src="images/o corvo.jpg" alt="Livro o corvo">
+                    <img src="images/Luta.jfif" alt="Luta">
                 </figure>
             </ol>
         </article>
